fix logo spacing

--- a/client/css/grayscale.css
+++ b/client/css/grayscale.css
@@ -63,6 +63,14 @@ a:focus {
     font-weight: 700;
 }
 
+
+@media(min-width:767px) {
+  #logo-top {
+    padding-top:0px;
+    padding-bottom:0px;
+  }
+}
+
 .navbar-brand:focus {
     outline: 0;
 }
